[package]
name = "mpnet-rs"
version = "0.1.0"
edition = "2021"
authors = ["NewBronRustacean <huiseomkim@gmail.com>"]
readme = "README.md"
description = "This is a translation of MPNet from PyTorch into Rust Candle."
repository = "https://github.com/NewBornRustacean/mpnet-rs"
license = "MIT OR Apache-2.0"
keywords = ["mpnet", "candle", "safetensors", "pytorch"]
categories = ["development-tools::cargo-plugins"]


[dependencies]
candle-core = "0.3.3"
candle-nn = "0.3.3"
serde = { version = "1.0.196", features = ["derive"] }
tokenizers = "0.15.1"
serde_json = "1.0.113"

[features]
exclude_from_ci = []
